Reimplement the hook in Python
pre-commit won't run bash hooks, so we'll use Python instead

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: merge-issue-number
   name: "Merge Issue Number"
   description: "Adds an Issue number from the branch to the commit message."
-  language: bash
-  entry: merge-issue-number.sh
+  language: python
+  entry: merge-issue-number
   stages: [prepare-commit-msg]
